--- a/project/WebContent/css/main.css
+++ b/project/WebContent/css/main.css
@@ -5,7 +5,9 @@ body{
 	min-height:100% !important;
 	width:100%;
 	height:100%;
+	position:absolute;
 }
+
 .circle {
  background: red;
   width: 86px;
@@ -38,8 +40,6 @@ body{
 .image-box{
 	width:100%;
 	height:100%;
-	background:rgba(0,0,0,0.9);
-	padding-top:80px;
 	z-index:3;
 	position:absolute;
 	display:none;
@@ -52,7 +52,6 @@ body{
 .imgContainer{
 	width:316px;
 	margin:0 auto;
-	border:3px solid yellow;
 	height:300px;
 	line-height:285px;
 	text-align:center;
@@ -395,6 +394,7 @@ body{
 	width:100%;
 	height:48px;
 	display:table;
+	table-layout: fixed;
 }
 .titleName{
 	color:white;
@@ -409,6 +409,7 @@ body{
 	position:relative;
 	width:45px;
 	float:right;
+	display: inline-block;
 }
 #searchIcon{
 	position:absolute;
@@ -460,4 +461,100 @@ body{
 	height:100%;
 	width:100%;
 	background:rgba(0,0,0,0.9);
+}
+#filterGlass{
+	position:absolute;
+	right:0px;
+}
+#glassBox{
+    position: relative;
+    float: right;
+    z-index: 3;
+    width: 45px;
+    height: 48px;
+}
+.navigation {
+  width: 100%;
+}
+
+.mainmenu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.timeselect {
+  display: block;
+  background-color: white;
+  text-decoration: none;
+  padding: 10px;
+  color: #000;
+}
+
+.timeselect:hover {
+    background-color: #d1d1d1;
+}
+
+.mainmenu li:hover .submenu {
+  display: block;
+  max-height: 200px;
+}
+.termInput{
+	width: 110px;
+    margin: 0 auto;
+}
+.directInput{
+  display: block;
+  background-color: white;
+  text-decoration: none;
+  padding: 10px;
+  color: #000;
+}
+.applybtn{
+	border-radius:0px;
+	width:100%;
+	margin-top:10px;
+}
+#filterBox{
+	height:100%;
+	position:relative;
+	width:45px;
+	float:right;
+	display: inline-block;
+}
+#filterIcon{
+	position:absolute;
+	max-width:100%;
+	max-height:100%;
+	width:auto;
+	height:auto;
+	margin:auto;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+}
+#filterContainer{
+	position:relative;
+    float: right;
+    z-index: 4;
+    width: 150px;
+    border: 1px solid gray;
+    background: white;
+}
+#uploadBox{
+	height:100%;
+	padding-top: 80px;
+    background: rgba(0,0,0,0.9);
+}
+/* .AllContainer{
+	position:fixed;
+	top:0px;
+	left:0px; 
+	min-height:100%;
+	width:100%;
+} */
+.filterSearch{
+    display: table-cell;
+    width: 92px;
 }
